Corrige problemas apontados pelo Sonnar
- Alguns atributos estáticos não eram ThreadSafe
- Havia um iteração com problemas de performance
- Invocação ineficiente do construtor da classe Boolean